egl: Add eglimports.hpp
This header file is included by glimports.hpp.  It is made a separate file
file so that we can add the (messy) GLES includes to it later without
complicating glimports.hpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,8 @@ endif ()
 # For glext headers
 include_directories (${CMAKE_CURRENT_SOURCE_DIR}/thirdparty)
 
+# For EGL headers
+include_directories (${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/khr)
 
 ##############################################################################
 # Installation directories
